<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity">

    <Button
            android:text="@string/btnFormRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFormRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/holo_red_dark" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFormTitleDate"
            app:layout_constraintStart_toStartOf="@+id/txtFormTitleDate" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.19999999" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btnFormView"/>
    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout" android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textFormFirstname" android:id="@+id/textFormFirstname"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textFormName" android:id="@+id/textFormName"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/textFormTitleDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFormTitleDate" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtFormDate" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
    <TextView
            android:text="@string/textFormDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFormDate"
            app:layout_constraintTop_toTopOf="@+id/txtFormTitleDate"
            app:layout_constraintBottom_toBottomOf="@+id/txtFormTitleDate"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtFormTitleDate" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/textFormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textFormTitle" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />
    <Button
            android:text="@string/btnFormView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFormView" app:layout_constraintEnd_toEndOf="@+id/txtFormDate"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintTop_toTopOf="@+id/btnFormRegister"
            app:layout_constraintBottom_toBottomOf="@+id/btnFormRegister"/>
</android.support.constraint.ConstraintLayout>