<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textLoginIdentifiant"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/identifiant"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imgLoginLogoIsen"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/textLoginPassword"
            app:layout_constraintStart_toStartOf="@+id/textLoginIdentifiant"
            android:hint="@string/password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textLoginIdentifiant"
            app:layout_constraintEnd_toEndOf="@+id/textLoginIdentifiant"/>
    <TextView
            android:text="@string/connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textLoginConnexion" android:layout_marginTop="128dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textStyle="bold" android:textSize="36sp"
            android:textAllCaps="false"/>
    <Button
            android:text="@string/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textLoginPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:src="@drawable/logo_isen"
            android:layout_width="282dp"
            android:layout_height="128dp"
            android:id="@+id/imgLoginLogoIsen" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textLoginConnexion" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>