<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHomeBonjour"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/textHomeBonjour"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imgHomeLogoIsen" android:textSize="36sp" android:textStyle="bold"
            android:textColor="@android:color/black"/>
    <ImageView
            android:layout_width="242dp"
            android:layout_height="114dp" app:srcCompat="@drawable/logo_isen"
            android:id="@+id/imgHomeLogoIsen" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnHomeDisconnect" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/textHomeCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textHomeCycle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnHomeCycle"
            app:layout_constraintStart_toStartOf="@+id/btnHomeCycle"
            app:layout_constraintEnd_toEndOf="@+id/btnHomeCycle"/>
    <TextView
            android:text="@string/textHomeSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnHomeForm"
            app:layout_constraintStart_toStartOf="@+id/btnHomeForm"
            app:layout_constraintEnd_toEndOf="@+id/btnHomeForm"/>
    <TextView
            android:text="@string/textHomePermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnHomePermission"
            app:layout_constraintEnd_toEndOf="@+id/btnHomePermission"
            app:layout_constraintStart_toStartOf="@+id/btnHomePermission"/>
    <TextView
            android:text="@string/textHomeWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnHomeWeb"
            app:layout_constraintStart_toStartOf="@+id/btnHomeWeb"
            app:layout_constraintEnd_toEndOf="@+id/btnHomeWeb"/>
    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/btnHomeCycle"
            android:background="@android:color/holo_red_dark"
            app:srcCompat="@android:drawable/ic_popup_sync"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btnHomeForm"
            app:layout_constraintTop_toBottomOf="@+id/textHomeBonjour"
            app:layout_constraintBottom_toTopOf="@+id/btnHomePermission"/>
    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@android:drawable/stat_notify_sdcard"
            android:id="@+id/btnHomeForm"
            android:background="@android:color/holo_red_dark" android:scaleType="fitXY"
            android:adjustViewBounds="false" app:layout_constraintTop_toBottomOf="@+id/textHomeBonjour"
            app:layout_constraintBottom_toTopOf="@+id/btnHomeWeb"
            app:layout_constraintStart_toEndOf="@+id/btnHomeCycle" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="goForm"/>
    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@android:drawable/stat_notify_call_mute"
            android:id="@+id/btnHomePermission"
            android:background="@android:color/holo_red_dark" android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="@+id/btnHomeCycle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnHomeWeb"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/btnHomeWeb"
            android:background="@android:color/holo_red_dark" android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="@+id/btnHomeForm"
            app:layout_constraintStart_toEndOf="@+id/btnHomePermission"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/btnHomedisconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHomeDisconnect"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imgHomeLogoIsen"/>

</android.support.constraint.ConstraintLayout>