<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PermissionActivity">

    <TextView
            android:text="@string/textPermissionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/textPermissionLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPermissionLatitude"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/btnPermissionLocation"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btnPermissionLocation"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/textPermissionLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPermissionLongitude"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textPermissionLatitude"
            app:layout_constraintBottom_toBottomOf="@+id/btnPermissionLocation"
            app:layout_constraintStart_toStartOf="@+id/textPermissionLatitude"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/ic_menu_mylocation"
            android:id="@+id/btnPermissionLocation"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:contentDescription="A button to get your location" android:scaleType="fitCenter"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textPermissionLongitude" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/dynPermissionContacts"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/ic_menu_gallery"
            android:id="@+id/btnPermissionGallery"
            app:layout_constraintTop_toTopOf="@+id/btnPermissionLocation"
            app:layout_constraintBottom_toBottomOf="@+id/btnPermissionLocation"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:scaleType="fitCenter"/>
</android.support.constraint.ConstraintLayout>